--- a/labschool-main/src/main/resources/application.properties
+++ b/labschool-main/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://containers-us-west-36.railway.app:6766/railway
+spring.datasource.url=jdbc:postgresql://containers-us-west-203.railway.app:5542/railway
 spring.datasource.username=postgres
-spring.datasource.password=rhs9h00bVMOlvGHSrQKT
+spring.datasource.password=8WqBxMgvNc5LBTPV0fqT
 
 spring.jpa.hibernate.ddl-auto=update
 
